// Enum para los tipos de producto

enum TipoProducto {

    LACTEO, CARNICO, FRUTA, ENLATADO

}